NoRef radio fix: commit COMMENTED workaround for wrapping (vertical-align:top skews the input position too much from baseline)
git-svn-id: svn://data.ilscipio.com/ilscipio/ofbiz_foundation/trunk@10587 55bbc10b-e964-4c8f-a844-a62c6f7d3c80

--- a/themes/base/webapp/base/scss/_base.scss
+++ b/themes/base/webapp/base/scss/_base.scss
@@ -716,3 +716,14 @@ input::-moz-focus-inner {
 }
 
 
+/*Radio and checkbox item long label wrapping workaround
+.radio-item, .checkbox-item {
+    white-space : nowrap;
+}
+.radio-item input, .checkbox-item input {
+    vertical-align: top;
+}
+.radio-item > *, .checkbox-item > * {
+    white-space : normal;
+}
+*/
